--- a/cat3.html
+++ b/cat3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Bella</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="seansCSS.css">
 <style>
 header, footer {
   background: linear-gradient(to right, #BBFFDD, #60B58B, #FFBBFF, #CA85CA, #9B529B);
