--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@ header, footer {
 </style>
 </head><body>
 <header><h1>Cat Gallery</h1></header>
-<nav><a href="index.html">Home</a> <a href="quiz.html">Quiz</a> <a href="game.html">Game</a> <a href="random.html">Random Cat</a></nav>
+<nav><a href="index.html">Home</a> <a href="quiz.html">Quiz</a> <a href="game.html">Game</a> <a href="randomcat.html">Random Cat</a></nav>
 <input type="text" id="searchInput" placeholder="Search cats by name or personality...">
 <div class="grid" id="catGrid">
 <div class="cat-card"><a href="cat1.html"><img src="images/cat1.jpg" alt="Luna"></a><p><strong>Luna</strong><br>Playful, curious</p></div>
