--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="quizStyles.css">
 </head>
 <body>
-<nav><a href="index.html">Home</a> <a href="quiz.html">Quiz</a> <a href="game.html">Game</a> <a href="random.html">Random Cat</a></nav>
+<nav><a href="index.html">Home</a> <a href="quiz.html">Quiz</a> <a href="catGame.html">Game</a> <a href="randomcat.html">Random Cat</a></nav>
     <div id="quiz-container">
         <h1>Cat Personality Quiz</h1>
         <form id="quiz-form">
